--- a/Chap3_Strings_Vectors_and_Arrays.ipynb
+++ b/Chap3_Strings_Vectors_and_Arrays.ipynb
@@ -286,11 +286,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "d98fcf40-7885-494b-8baa-651fba9524d6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "//The string::size_type Type\n",
+    "\n",
+    "auto len = line.size();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "c52ec657-80bd-44f2-a73a-5d9f51b452c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "decltype(line.size()) len = line.size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "a6e4d796-7b82-4fc8-a696-de277f480d27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//Comparing strings\n",
+    "/*Rule1 - If two strings have different lengths and if every character in the shorter\n",
+    "string is equal to the corresponding character of the longer string, then\n",
+    "the shorter string is less than the longer one.*/\n",
+    "\n",
+    "/*Rule2 - If any characters at corresponding positions in the two strings differ, then\n",
+    "the result of the string comparison is the result of comparing the first char-\n",
+    "acter at which the strings differ.*/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "918a1895-3811-45ca-b58a-a3d310056986",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "string str = \"Hello\";\n",
+    "string phrase = \"Hello WOrld\";//highest length\n",
+    "string slang = \"Hiya\";"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "82843022-0eeb-477b-9e4c-291449c49cfd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "false"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str>slang //still str is larger than slang by Rule2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "2705fef1-d6b0-445e-b05e-72efda8d12d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//Assignment for stirngs\n",
+    "string s1 = \"Hello,\",s2 = \"World\\n\";\n",
+    "string s3 =  s1 + s2;\n",
+    "\n",
+    "\n",
+    "s1+=s2;  //equivalent to s1 = s1 + s2;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "b540031d-e630-4659-b8ed-1d4702c0b594",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//Adding Literals and strings\n",
+    "\n",
+    "string s4 = \"Hello\"+ s2;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c403b83-34f9-4280-ae6a-3df9c1e7ecdf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//Excercise - To input one line at a time we can use getline(cin, line)\n",
+    "//To input one word at a time we can use cin>>line;\n",
+    "\n",
+    "\n",
+    "//3.3"
+   ]
   }
  ],
  "metadata": {
