--- a/Chap3_Strings_Vectors_and_Arrays.ipynb
+++ b/Chap3_Strings_Vectors_and_Arrays.ipynb
@@ -110,11 +110,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3ae3da41",
-   "metadata": {
-    "vscode": {
-     "languageId": "cpp"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#include <string>\n",
@@ -264,21 +260,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "c1abffd1-aae9-4947-8312-a571ec2aac6f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "string line {\"hello\"};\n",
     "line.size()"
@@ -286,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "d98fcf40-7885-494b-8baa-651fba9524d6",
    "metadata": {},
    "outputs": [],
@@ -298,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "c52ec657-80bd-44f2-a73a-5d9f51b452c8",
    "metadata": {},
    "outputs": [],
@@ -308,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "a6e4d796-7b82-4fc8-a696-de277f480d27",
    "metadata": {},
    "outputs": [],
@@ -325,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "918a1895-3811-45ca-b58a-a3d310056986",
    "metadata": {},
    "outputs": [],
@@ -337,28 +322,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "82843022-0eeb-477b-9e4c-291449c49cfd",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "false"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "str>slang //still str is larger than slang by Rule2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "2705fef1-d6b0-445e-b05e-72efda8d12d0",
    "metadata": {},
    "outputs": [],
@@ -373,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "b540031d-e630-4659-b8ed-1d4702c0b594",
    "metadata": {},
    "outputs": [],
@@ -394,7 +368,71 @@
     "//To input one word at a time we can use cin>>line;\n",
     "\n",
     "\n",
-    "//3.3"
+    "//3.3//3.4//3.5 all done"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b777c5a-7139-42c7-b106-0d25d2d294ae",
+   "metadata": {},
+   "source": [
+    "Dealing with the Characters in a string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2607ccb7-7ca8-40fa-a56f-65b9091cde8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//Processing every character?\n",
+    "//Use Range-Based for\n",
+    "\n",
+    "/*for (declaration:expression)\n",
+    "    statement*/\n",
+    "\n",
+    "string str {\"some string\"};"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "caa8a12e-36ee-413e-ab1b-de8e4a627910",
+   "metadata": {},
+   "source": [
+    "![Alt text](Screenshot%20from%202022-12-15%2013-46-41.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b56b1de6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//using a Rnage for to change the characters in a string\n",
+    "\n",
+    "string s {\"Hello World\"};\n",
+    "\n",
+    "for (auto &x : s)\n",
+    "    x = toupper(x); //c is a reference so the assignmentr chages the char in s\n",
+    "cout<<s<<endl;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1be8d1b-883a-48b5-8e57-603a73547d87",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//Processing Only some characters?\n",
+    "//Thera re two way to access individual characters in atring: We cna use a sub\n",
+    "//scirpt or an iterator. We will have more to say about iterators later\n",
+    "//the subscript operator(the [] operator) takes a string::size_type\n",
+    "\n",
+    "//first character s[0]\n",
+    "//last character \n"
    ]
   }
  ],
