--- a/Chap2_from_2.6.ipynb
+++ b/Chap2_from_2.6.ipynb
@@ -244,20 +244,20 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "C++11",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "xcpp11"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": "text/x-c++src",
    "file_extension": ".cpp",
    "mimetype": "text/x-c++src",
    "name": "python",
-   "version": "3.11.0 | packaged by conda-forge | (main, Oct 25 2022, 06:24:40) [GCC 10.4.0]"
+   "version": "3.10.9"
   },
   "vscode": {
    "interpreter": {
-    "hash": "f1d1fc19b365f9ad1716256121e630045ec3968373de9ab098681291a9c3ca4f"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
