--- a/Chap3_Strings_Vectors_and_Arrays.ipynb
+++ b/Chap3_Strings_Vectors_and_Arrays.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b6118363",
    "metadata": {},
    "outputs": [],
@@ -405,10 +405,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b56b1de6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HELLO WORLD\n"
+     ]
+    }
+   ],
    "source": [
     "//using a Rnage for to change the characters in a string\n",
     "\n",
@@ -421,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d1be8d1b-883a-48b5-8e57-603a73547d87",
    "metadata": {},
    "outputs": [],
@@ -434,6 +442,260 @@
     "//first character s[0]\n",
     "//last character \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "7ee02a6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1minput_line_11:2:2: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1muse of undeclared identifier 'c'\u001b[0m\n",
+      " c = toupper(c);\n",
+      "\u001b[0;1;32m ^\n",
+      "\u001b[0m\u001b[1minput_line_11:2:14: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1muse of undeclared identifier 'c'\u001b[0m\n",
+      " c = toupper(c);\n",
+      "\u001b[0;1;32m             ^\n",
+      "\u001b[0m"
+     ]
+    },
+    {
+     "ename": "Interpreter Error",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "Interpreter Error: "
+     ]
+    }
+   ],
+   "source": [
+    "c = toupper(c); //c is a reference so \n",
+    "//the assignment  changes the char in s"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74928d92",
+   "metadata": {},
+   "source": [
+    "Processing Only Some Characters?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "31b4cdb0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//A range for works well when we need to process every character. However,\n",
+    "//sometimes we need to access only a single character or to access\n",
+    "//characters until some condition is reached.\n",
+    "\n",
+    "///[] is the subscript operator takes a string::size_type\n",
+    "\n",
+    "//first character s[1]\n",
+    "//Last character s[s.size() -  1]\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "0bc06676",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "string s = \"Hello World!\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "9ab8556d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H\n"
+     ]
+    }
+   ],
+   "source": [
+    "if (!s.empty())\n",
+    "    cout<<s[0]<<endl;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "bbd6dc57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "string s(\"some string\");\n",
+    "if (!s.empty())\n",
+    "    s[0] = toupper(s[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3a59b4b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//Using a Subscript for Iteration\n",
+    "\n",
+    "//As another example, we'll change th efirst word in s to all uppercase:\n",
+    "\n",
+    "for (decltype(s.size()) index = 0;\n",
+    "    index != s.size() && !isspace(s[index]); ++index)\n",
+    "    s[index] = toupper(s[index]);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c819d55",
+   "metadata": {},
+   "source": [
+    "Using a Subscript for Random Access"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "1a1cf6d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "const string hexdigits = \"0123456789ABCDEF\";"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "25494298",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a series of numbers between 0 and 15 Separated by spaces. Hit ENTER when finished: \n"
+     ]
+    }
+   ],
+   "source": [
+    "cout << \"Enter a series of numbers between 0 and 15\"\n",
+    "    << \" Separated by spaces. Hit ENTER when finished: \"\n",
+    "    <<endl;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "d54774f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "string result;  //will hold the resultign hexifyd string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "2747db86",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1minput_line_19:5:16: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mno viable overloaded '+='\u001b[0m\n",
+      "        result += hexdigits[n]; //fetch the indicated hex digit\n",
+      "\u001b[0;1;32m        ~~~~~~ ^  ~~~~~~~~~~~~\n",
+      "\u001b[0m\u001b[1m/home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/12.2.0/bits/basic_string.h:1339:7: \u001b[0m\u001b[0;1;30mnote: \u001b[0mcandidate function not viable: no known conversion from 'const __gnu_cxx::__alloc_traits<std::allocator<char>, char>::value_type' (aka 'const char') to 'const char *' for 1st argument; take the address of the argument with &\u001b[0m\n",
+      "      operator+=(const _CharT* __s)\n",
+      "\u001b[0;1;32m      ^\n",
+      "\u001b[0m\u001b[1m/home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/12.2.0/bits/basic_string.h:1329:7: \u001b[0m\u001b[0;1;30mnote: \u001b[0mcandidate function not viable: no known conversion from 'const __gnu_cxx::__alloc_traits<std::allocator<char>, char>::value_type' (aka 'const char') to 'const std::__cxx11::basic_string<char>' for 1st argument\u001b[0m\n",
+      "      operator+=(const basic_string& __str)\n",
+      "\u001b[0;1;32m      ^\n",
+      "\u001b[0m\u001b[1m/home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/12.2.0/bits/basic_string.h:1363:7: \u001b[0m\u001b[0;1;30mnote: \u001b[0mcandidate function not viable: no known conversion from 'const __gnu_cxx::__alloc_traits<std::allocator<char>, char>::value_type' (aka 'const char') to 'initializer_list<char>' for 1st argument\u001b[0m\n",
+      "      operator+=(initializer_list<_CharT> __l)\n",
+      "\u001b[0;1;32m      ^\n",
+      "\u001b[0m"
+     ]
+    },
+    {
+     "ename": "Interpreter Error",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "Interpreter Error: "
+     ]
+    }
+   ],
+   "source": [
+    "string:: size_type  n; // hold numbers from the input\n",
+    "while (cin >> n)\n",
+    "    if (n < hexdigits.size()) //ignore invalid input\n",
+    "        result += hexdigits[n]; //fetch the indicated hex digit\n",
+    "cout << \"Your hex number is: \" << result << endl;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "f5622f6b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//pg95.cpp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "9707addc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "string s;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c4c7b43f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u0000\n"
+     ]
+    }
+   ],
+   "source": [
+    "cout<<s[0]<<endl;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee548454",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
