--- a/Chap3_Strings_Vectors_and_Arrays.ipynb
+++ b/Chap3_Strings_Vectors_and_Arrays.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "b6118363",
    "metadata": {},
    "outputs": [],
@@ -2824,7 +2824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 4,
    "id": "3792b90c",
    "metadata": {},
    "outputs": [],
@@ -2839,7 +2839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 5,
    "id": "7a2f6dda",
    "metadata": {},
    "outputs": [
@@ -2849,7 +2849,7 @@
        "{ { 0, 1, 2, 3 }, { 4, 5, 6, 7 }, { 8, 9, 10, 11 } }"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2860,7 +2860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 6,
    "id": "b833d277",
    "metadata": {},
    "outputs": [],
@@ -2870,7 +2870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 7,
    "id": "9467f52d",
    "metadata": {},
    "outputs": [
@@ -2880,7 +2880,7 @@
        "{ { 0, 1, 2, 3 }, { 4, 5, 6, 7 }, { 8, 9, 10, 0 } }"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2891,7 +2891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 8,
    "id": "ba1b5dad",
    "metadata": {},
    "outputs": [],
@@ -2901,7 +2901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 9,
    "id": "f83ab98c",
    "metadata": {},
    "outputs": [
@@ -2911,7 +2911,7 @@
        "{ { 0, 0, 0, 0 }, { 4, 0, 0, 0 }, { 8, 0, 0, 0 } }"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2922,7 +2922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 10,
    "id": "3af0d0fb",
    "metadata": {},
    "outputs": [],
@@ -2934,7 +2934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 11,
    "id": "c14c7916",
    "metadata": {},
    "outputs": [
@@ -2944,7 +2944,7 @@
        "{ { 0, 3, 6, 9 }, { 0, 0, 0, 0 }, { 0, 0, 0, 0 } }"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2963,10 +2963,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 12,
    "id": "9dcf9d62",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1minput_line_25:2:15: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1muse of undeclared identifier 'arr'; did you mean 'arg'?\u001b[0m\n",
+      "  ia[2][3]  = arr[0][0][0];  //assigns the first element of arr to the last element\n",
+      "\u001b[0;1;32m              ^~~\n",
+      "\u001b[0m\u001b[0;32m              arg\n",
+      "\u001b[0m\u001b[1m/home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/12.2.0/complex:653:5: \u001b[0m\u001b[0;1;30mnote: \u001b[0m'arg' declared here\u001b[0m\n",
+      "    arg(const complex<_Tp>& __z) { return __complex_arg(__z.__rep()); }\n",
+      "\u001b[0;1;32m    ^\n",
+      "\u001b[0m\u001b[1minput_line_25:2:15: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mreference to overloaded function could not be resolved; did you mean to call it?\u001b[0m\n",
+      "  ia[2][3]  = arr[0][0][0];  //assigns the first element of arr to the last element\n",
+      "\u001b[0;1;32m              ^~~\n",
+      "\u001b[0m\u001b[1m/home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/12.2.0/complex:653:5: \u001b[0m\u001b[0;1;30mnote: \u001b[0mpossible target for call\u001b[0m\n",
+      "    arg(const complex<_Tp>& __z) { return __complex_arg(__z.__rep()); }\n",
+      "\u001b[0;1;32m    ^\n",
+      "\u001b[0m"
+     ]
+    },
+    {
+     "ename": "Interpreter Error",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "Interpreter Error: "
+     ]
+    }
+   ],
    "source": [
     " ia[2][3]  = arr[0][0][0];  //assigns the first element of arr to the last element\n",
     "//in the last row of ia"
@@ -2974,7 +3003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 13,
    "id": "75aa5e2e",
    "metadata": {},
    "outputs": [
@@ -2984,7 +3013,7 @@
        "{ { 0, 0, 0, 0 }, { 4, 0, 0, 0 }, { 8, 0, 0, 0 } }"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2995,7 +3024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 14,
    "id": "ff0d01cb",
    "metadata": {},
    "outputs": [],
@@ -3005,7 +3034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 15,
    "id": "9b2e79bf",
    "metadata": {},
    "outputs": [
@@ -3015,7 +3044,7 @@
        "{ { 0, 0, 0, 0 }, { 4, 0, 0, 0 }, { 8, 0, 0, 0 } }"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3026,7 +3055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 16,
    "id": "2a4f93ef",
    "metadata": {},
    "outputs": [],
@@ -3037,31 +3066,427 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 17,
    "id": "dfb0d232",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//for each row\n",
+    "\n",
+    "for (size_t i = 0; i != rowCnt; ++i){\n",
+    "    //for each column within the row\n",
+    "    for (size_t j = 0; j != colCnt; ++j){\n",
+    "        // assign the lements positional index as its value\n",
+    "        ia[i][j] = i * colCnt + j;\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "d19caaf8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{ { 0, 0, 0, 0 }, { 0, 0, 0, 0 }, { 0, 0, 0, 0 } }"
+       "{ { 0, 1, 2, 3 }, { 4, 5, 6, 7 }, { 8, 9, 10, 11 } }"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "//for each row\n",
+    "ia"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c933bd0",
+   "metadata": {},
+   "source": [
+    "Using a Range for with Multidimensional Arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "79c46676",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "//Under the new standard we can simplify the previous loop by using a range for:\n",
     "\n",
-    "for ()"
+    "size_t cnt = 0;\n",
+    "for (auto &row: ia)   //for every element in the outer array\n",
+    "    for (auto &col : row) { //for every element in the inner array\n",
+    "        col = cnt;          //give this element the next value\n",
+    "        ++cnt;              // increment cnt\n",
+    "        \n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "23d88c6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "//In the previoius example we used references as our loop control variables because we wanted to \n",
+    "//change the elements in the array.\n",
+    "\n",
+    "for (const auto &row : ia)\n",
+    "    for (auto col: row)\n",
+    "        cout << col << endl;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "ceabab86",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "int ia[3][4];\n",
+    "int (*p)[4] = ia;\n",
+    "p = &ia[2];"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "3679d02f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{ 0, 0, 0, 0 }"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "*p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "dbddb5a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0 0 0 \n",
+      "0 0 0 0 \n",
+      "0 0 0 0 \n"
+     ]
+    }
+   ],
+   "source": [
+    "//print the value of each element in ia with each inner array on its own line\n",
+    "//p points to an array of four ints\n",
+    "\n",
+    "for (auto p = ia; p!=ia+3; ++p){\n",
+    "    //q points to the first element of an array of four ints; that it q points to an int\n",
+    "    for (auto q = *p; q!=*p +4; ++q)\n",
+    "        cout << *q << ' ';\n",
+    "    cout << endl;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "fa660342",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0 0 0 0 0 0 0 0 0 0 0 \n"
+     ]
+    }
+   ],
+   "source": [
+    "// Also we an even more easily write this loop using the livrary begin and the end funcitons\n",
+    "\n",
+    "//p points to the first array in ia\n",
+    "\n",
+    "for (auto p = begin(ia); p != end(ia); ++p)\n",
+    "    //q points to the first element in an inner array\n",
+    "    for (auto q = begin(*p); q != end(*p); ++q)\n",
+    "        cout << *q << ' ';\n",
+    "cout << endl;\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94b1d3b5",
+   "metadata": {},
+   "source": [
+    "Type Aliases Simplify Pointers to Multidimensional Arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "363256fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0 0 0 \n",
+      "0 0 0 0 \n",
+      "0 0 0 0 \n"
+     ]
+    }
+   ],
+   "source": [
+    "using int_array  = int[4];  // new style type alias declaration\n",
+    "typedef int int_array[4];   // equivalent typedef declaration\n",
+    "\n",
+    "//print the value of each element in ia, with each inner array on its own line\n",
+    "\n",
+    "for (int_array *p = ia; p !=  ia+3; ++p) {\n",
+    "    for (int *q = *p; q != *p +4; ++q)\n",
+    "        cout << *q << ' ';\n",
+    "    cout << endl;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "bd4f1336",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1minput_line_46:2:20: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1muse of undeclared identifier 'nrow'\u001b[0m\n",
+      " for(size_t i=0;i!=nrow;++i)\n",
+      "\u001b[0;1;32m                   ^\n",
+      "\u001b[0m\u001b[1minput_line_46:4:27: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1muse of undeclared identifier 'ncol'\u001b[0m\n",
+      "        for(size_t j=0;j!=ncol;++j)\n",
+      "\u001b[0;1;32m                          ^\n",
+      "\u001b[0m\u001b[1minput_line_46:6:17: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1muse of undeclared identifier 'ia'\u001b[0m\n",
+      "                ia[i][j] = i*ncol + j;\n",
+      "\u001b[0;1;32m                ^\n",
+      "\u001b[0m\u001b[1minput_line_46:6:30: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1muse of undeclared identifier 'ncol'\u001b[0m\n",
+      "                ia[i][j] = i*ncol + j;\n",
+      "\u001b[0;1;32m                             ^\n",
+      "\u001b[0m"
+     ]
+    },
+    {
+     "ename": "Interpreter Error",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "Interpreter Error: "
+     ]
+    }
+   ],
+   "source": [
+    "for(size_t i=0;i!=nrow;++i)\n",
+    "    {\n",
+    "        for(size_t j=0;j!=ncol;++j)\n",
+    "            {\n",
+    "                ia[i][j] = i*ncol + j;\n",
+    "            }\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "554cf6ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "int nrow;\n",
+    "int ncol;\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "4fd76415",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "@0x7feaec5fdc80"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cin>>nrow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "44e649dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "cin>>ncol;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "e56e6635",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "int ia[4][4];"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "d858664c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1minput_line_82:2:17: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mcannot initialize a variable of type 'const int' with an lvalue of type 'int [4]'\u001b[0m\n",
+      " for (const int i : ia)\n",
+      "\u001b[0;1;32m                ^ ~\n",
+      "\u001b[0m"
+     ]
+    },
+    {
+     "ename": "Interpreter Error",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "Interpreter Error: "
+     ]
+    }
+   ],
+   "source": [
+    "for (const int i : ia)\n",
+    "    cout<<i;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "cdf56b08",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1minput_line_45:8:5: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mvariable length array declaration not allowed at file scope\u001b[0m\n",
+      "int ia[nrow][ncol];\n",
+      "\u001b[0;1;32m    ^  ~~~~\n",
+      "\u001b[0mIn file included from input_line_5:1:\n",
+      "In file included from /home/susearc/miniconda3/envs/xeus-cling/include/xeus/xinterpreter.hpp:17:\n",
+      "In file included from /home/susearc/miniconda3/envs/xeus-cling/include/xeus/xcomm.hpp:19:\n",
+      "In file included from /home/susearc/miniconda3/envs/xeus-cling/include/nlohmann/json.hpp:55:\n",
+      "In file included from /home/susearc/miniconda3/envs/xeus-cling/include/nlohmann/detail/input/binary_reader.hpp:16:\n",
+      "In file included from /home/susearc/miniconda3/envs/xeus-cling/include/nlohmann/detail/input/input_adapters.hpp:7:\n",
+      "In file included from /home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/12.2.0/istream:39:\n",
+      "\u001b[1m/home/susearc/miniconda3/envs/xeus-cling/bin/../lib/gcc/../../x86_64-conda-linux-gnu/include/c++/12.2.0/ostream:618:8: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mno member named 'setstate' in 'std::basic_ostream<char>'\u001b[0m\n",
+      "        __out.setstate(ios_base::badbit);\n",
+      "\u001b[0;1;32m        ~~~~~ ^\n",
+      "\u001b[0m\u001b[1minput_line_45:4:5: \u001b[0m\u001b[0;1;30mnote: \u001b[0min instantiation of function template specialization 'std::operator<<<std::char_traits<char> >' requested here\u001b[0m\n",
+      "cout<<\"Enter rows\";\n",
+      "\u001b[0;1;32m    ^\n",
+      "\u001b[0m"
+     ]
+    },
+    {
+     "ename": "Interpreter Error",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "Interpreter Error: "
+     ]
+    }
+   ],
+   "source": [
+    "int nrow;\n",
+    "int ncol;\n",
+    "cout<<\"Enter rows\";\n",
+    "cin>>nrow;\n",
+    "cout<<\"Enter cols\";\n",
+    "cin>>ncol;\n",
+    "int ia[nrow][ncol];\n",
+    "for (size_t i=0;i!=nrow;++i)\n",
+    "{\n",
+    "   for(size_t j=0;j!=ncol;++j)\n",
+    "       {\n",
+    "            ia[i][j] = i*ncol + j;\n",
+    "       }\n",
+    "};\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d19caaf8",
+   "id": "dc4c9ea4",
    "metadata": {},
    "outputs": [],
    "source": []
